<resources>
    <string name="app_name">Bookopedia</string>
    <string name="img1">introImg</string>
    <string name="padding">5dp</string>
    <string name="txt1">Welcome All</string>
    <string name="btn1">"Let's get started "</string>
    <string name="usernameText">username:</string>
    <string name="loginTextVal">login here</string>
    <string name="usernameEditHint">username</string>
    <string name="passowordHint">password</string>
    <string name="registerLinkText">create one</string>
    <string name="accountHintVal">Create your Bookopedia account</string>
    <string name="firstnameEditTextVal">first name</string>
    <string name="lastnameEditTextVal">last name</string>
    <string name="emailIdEditTextVal">email id</string>
    <string name="phonenumEditTextVal">mobile number</string>
    <string name="passwordEditTextVal">password</string>
    <string name="confirmpasswordEditTextVal">confirm password</string>
    <string name="registerButtonVal">register</string>
    <string name="cancelButtonVal">cancel</string>
    <string name="personalizeLabelTextVal">Pick your choices to personalize your profile</string>
    <string name="fictionCheckboxVal">Fiction</string>
    <string name="nonFictionCheckboxVal">Non - fiction</string>
    <string name="romanceCheckboxVal">Romance</string>
    <string name="detectiveCheckBoxVal">Detective</string>
    <string name="educationCheckboxVal">Education</string>
    <string name="thrillerCheckboxVal">Thriller</string>
    <string name="savePrefButtonVal">save preferences</string>
    <string name="searchHintVal">book search</string>
    <string name="fictionBookNameVal">Then She was Gone: A Novel Paperback</string>
    <string name="fiction1AuthorNameVal">by: Lisa Jewell</string>
    <string name="fiction2BookNameVal">The Four Winds</string>
    <string name="fiction2AuthorNameVal">by: Kristin Hannah</string>
    <string name="fiction3BookNameVal">The Committed</string>
    <string name="fiction3AuthorNameVal">by: Viet Thanh Nguyen</string>
    <string name="nonFiction1BookNameVal">The Pale - Faced Lie: A True Story</string>
    <string name="nonFiction1AuthorNameVal">by: David Crow</string>
    <string name="nonFiction2BookNameVal">The Book: On the Taboo Against Knowing who you are</string>
    <string name="nonFiction2AuthorNameVal">by: Alan Watts</string>
    <string name="nonFiction3BookNameVal">Surviving the Forest</string>
    <string name="nonFiction3AuthorNameVal">by: Adiva Geffen</string>
    <string name="romance1BookNameVal">For Once in my life</string>
    <string name="romance1AuthorNameVal">by: Colleen Coleman</string>
    <string name="romance2BookNameVal">Cottage by the sea</string>
    <string name="romance2AuthorNameVal">by: Debbie Macomber</string>
    <string name="romance3BookNameVal">Saltwater Cove</string>
    <string name="romance3AuthorNameVal">by: Amelia Addler</string>
    <string name="bookSynopsisTextVal">Book Synopsis</string>
    <string name="addToCartBtnVal">Add to Cart</string>
    <string-array name="daySpinner">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

</resources>