<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/book"
    android:orientation="vertical"
    android:padding="@dimen/margin5dp"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/accountHintView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin20dp"
        android:text="@string/accountHintVal"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/firstnameEditTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/firstnameEditTextVal"
        android:inputType="textPersonName"
        android:padding="@dimen/margin5dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/lastnameEditTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin20dp"
        android:ems="10"
        android:hint="@string/lastnameEditTextVal"
        android:inputType="textPersonName"
        android:padding="@dimen/margin5dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/emailIdEditTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin20dp"
        android:ems="10"
        android:hint="@string/emailIdEditTextVal"
        android:inputType="textPersonName|textEmailAddress"
        android:padding="@dimen/margin5dp" />

    <EditText
        android:id="@+id/phonenumEditTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin20dp"
        android:ems="10"
        android:hint="@string/phonenumEditTextVal"
        android:inputType="textPersonName|phone"
        android:padding="@dimen/margin5dp" />

    <EditText
        android:id="@+id/passwordEditTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin20dp"
        android:ems="10"
        android:hint="@string/passwordEditTextVal"
        android:inputType="none|textPassword"
        android:padding="@dimen/margin5dp" />

    <EditText
        android:id="@+id/confirmpasswordEditTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin20dp"
        android:ems="10"
        android:hint="@string/confirmpasswordEditTextVal"
        android:inputType="none|textPassword"
        android:padding="@dimen/margin5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/registerButtonView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="@dimen/margin5dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/registerButtonVal"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/cancelButtonView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin5dp"
            android:layout_marginTop="@dimen/margin5dp"
            android:layout_marginRight="@dimen/margin5dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/cancelButtonVal"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>