<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/book"
    android:orientation="vertical"
    tools:context=".PersonalizeProfile">

    <TextView
        android:id="@+id/personalizeLabelTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin20dp"
        android:layout_marginEnd="@dimen/margin5dp"
        android:layout_marginRight="@dimen/margin5dp"
        android:layout_marginBottom="@dimen/margin20dp"
        android:text="@string/personalizeLabelTextVal"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/textSize_24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/fictionCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin20dp"
            android:layout_weight="1"
            android:text="@string/fictionCheckboxVal"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSize_24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/nonFictionCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin20dp"
            android:layout_marginTop="@dimen/margin20dp"
            android:layout_weight="1"
            android:text="@string/nonFictionCheckboxVal"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSize_24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/romanceCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin20dp"
            android:layout_marginTop="@dimen/margin20dp"
            android:layout_weight="1"
            android:text="@string/romanceCheckboxVal"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSize_24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/detectiveCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin20dp"
            android:layout_marginTop="@dimen/margin20dp"
            android:layout_weight="1"
            android:text="@string/detectiveCheckBoxVal"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSize_24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/educationCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin20dp"
            android:layout_marginTop="@dimen/margin20dp"
            android:layout_weight="1"
            android:text="@string/educationCheckboxVal"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSize_24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/thrillerCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin20dp"
            android:layout_marginTop="@dimen/margin20dp"
            android:layout_weight="1"
            android:text="@string/thrillerCheckboxVal"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSize_24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/savePrefButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin5dp"
            android:layout_marginTop="@dimen/margin20dp"
            android:layout_marginRight="@dimen/margin5dp"
            android:layout_marginBottom="@dimen/margin20dp"
            android:background="@drawable/button_background"
            android:text="@string/savePrefButtonVal"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="@dimen/buttonTextSize" />
    </LinearLayout>

</LinearLayout>