<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/img1"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/padding"
        android:paddingTop="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:paddingBottom="30dp"
        android:shadowColor="@color/colorPrimary"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="8"
        android:text="@string/txt1"
        android:textColor="@android:color/holo_red_light"
        android:textSize="36sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/img1"
        android:layout_width="wrap_content"
        android:layout_height="480dp"
        android:contentDescription="@string/img1"
        app:srcCompat="@drawable/bookin" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#22FF98"
        android:fontFamily="casual"
        android:paddingStart="@dimen/padding"
        android:paddingLeft="@dimen/padding"
        android:paddingTop="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:paddingBottom="@dimen/margin5dp"
        android:text="@string/btn1"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>